# ros_robot_arm

./: .gitignore  frames_2025-05-10_15.34.56.gv
src/robot_arm/: CMakeLists.txt  package.xml
src/robot_arm/launch/: view_robot.launch.py  view_test.launch.py  view_test_box.launch.py
src/robot_arm/meshes/: box_link.stl
src/robot_arm/scripts/: stl_marker_rviz2.py
src/robot_arm/urdf/: link_picker.urdf  test_box.urdf
src/robot_arm_control/: CMakeLists.txt  package.xml
src/robot_arm_control/include/robot_arm_control/: robot_arm.hpp
src/robot_arm_control/src/: robot_arm.cpp  robot_arm_node.cpp
src/robot_arm_control_v1/: CMakeLists.txt  package.xml
src/robot_arm_control_v1/src/: robot_arm.cpp  robot_arm_node.cpp
src/robot_arm_description/: CMakeLists.txt  package.xml
src/robot_arm_description/launch/: test_box.launch.py  view_robot.launch.py  view_test_robot.launch.py
src/robot_arm_description/meshes/: base_link.STL  base_link.dae  one_Link.STL  two_Link.STL
src/robot_arm_description/urdf/: robot_arm.urdf  test_box.urdf  test_robot_arm.urdf
src/robot_arm_gripper/: CMakeLists.txt  package.xml
src/robot_arm_gripper/src/: robot_arm_gripper_node.cpp
src/robot_arm_gripper_service/: CMakeLists.txt  package.xml
src/robot_arm_gripper_service/src/: robot_arm_gripper_service_node.cpp
src/robot_arm_gripper_service/srv/: ControlGripper.srv  RotateGripper.srv
src/robot_arm_rviz/: CMakeLists.txt  package.xml
src/robot_arm_rviz/launch/: view_robot.launch.py
src/robot_arm_rviz/meshes/: base_link.STL  one_Link.STL  two_Link.STL
src/robot_arm_rviz/urdf/: robot_arm.urdf
