<?xml version="1.0"?>
<package format="3">
  <name>robot_arm_gripper</name>
  <version>0.0.1</version>
  <description>Robot arm and gripper standalone node</description>
  <maintainer email="sangjun@example.com">Sangjun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>
</package>

