<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_arm_gripper_service</name>
  <version>0.0.0</version>
  <description>Service interface and node for controlling robot arm and gripper</description>

  <maintainer email="sang@todo.todo">sang</maintainer>
  <license>MIT</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 시 필요한 패키지 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_interface_definition</build_depend>
  <build_depend>dynamixel_sdk</build_depend>

  <!-- 실행 시 필요한 패키지 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>

  <!-- 메시지/서비스 인터페이스 그룹 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

